# FDM-3D

./: .gitignore  .gitmodules  Project-FDM-3D.sln
Debug/: Project-FDM-3D.ilk
Project-FDM-3D/: Action.cpp  Action.h  ActionManager.cpp  ActionManager.h  App.cpp  App.h  Axis.cpp  Axis.h  Camera.cpp  Camera.h  E_ActionType.h  E_Axis.h  E_Direction4.h  E_Direction6.h  E_InputAction.h  E_ObjectType.h  E_TextureID.h  InputManager.cpp  InputManager.h  Model.cpp  Model.h  ModelPoint.cpp  ModelPoint.h  Project-FDM-3D.vcxproj  Project-FDM-3D.vcxproj.filters  RenderRectangle.cpp  RenderRectangle.h  RenderTarget.cpp  RenderTarget.h  RenderTriangle.cpp  RenderTriangle.h  RenderVertex.cpp  RenderVertex.h  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  (+7 more)
Project-FDM-3D/Debug/: vc141.idb
Project-FDM-3D/Models/: arrow.bvm  map.bvm  (+4 more)
Release/: Project-FDM-3D.iobj  Project-FDM-3D.ipdb
src/: App.cpp  App.h  CMakeLists.txt  Complex2RealType.h  ComplexFloat.cpp  ComplexFloat.h  DimensionName.h  Equation.cpp  Equation.h  EquationValue.cpp  EquationValue.h  FloatVector.cpp  FloatVector.h  I_SystemOfEquations.h  JacobiMatrix.cpp  JacobiMatrix.h  JacobiSystemOfEquations.cpp  JacobiSystemOfEquations.h  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  MapMatrix.cpp  MapMatrix.h  MapValue.h  Matrix.cpp  Matrix.h  MatrixSystemOfEquations.cpp  MatrixSystemOfEquations.h  Range3D.cpp  Range3D.h  RenderTriangle.cpp  RenderTriangle.h  RenderVertex.cpp  RenderVertex.h  Renderer.cpp  Renderer.h  ScaleType.h  Solver.cpp  Solver.h  (+11 more)
src/cmake/: FindGLFW.cmake
src/maps/: closedroom-r.json  closedroom-s.json  closedroom-w.json  config.json  diffraction-s.json  diffraction-w.json  dipole-r.json  dipole-s.json  dipole-w.json  freespace-s.json  freespace-w.json  interference-s.json  interference-w.json  pillars-r.json  pillars-s.json  pillars-w.json  room.json  scene-r.json  scene-s.json  scene-w.json  speakers.json  testmap.json  window-r.json  window-w.json
src/shaders/: compile_shaders.sh  shader.vert
src/textures/: texture.xcf
vulkan/: Getting_Started.html  Release_Notes.html  build_samples.sh  build_tools.sh
(+35 files in other folders)
